<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">openGL</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="index">请输入个人信息</string>
    <string name="name">姓名：</string>
    <string name="position">职位：</string>
    <string name="company">公司：</string>
    <string name="Tel">电话：</string>
    <string name="Email">Email：</string>
    <string name="submit">提交</string>
    <string name="cancle">取消</string>
    <string name="next">下一步</string>
    <string name="title_activity_select">SelectActivity</string>
    <string name="uploadPic">选取照片</string>
    <string name="title_activity_pic">PicActivity</string>
    <string name="up">确认</string>
    <string name="title_activity_show_card">ShowCardActivity</string>

</resources>
