<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
   
    <EditText
        android:id="@+id/positionInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/position"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:ems="10" >

        <requestFocus />
    </EditText>
     
    <EditText
        android:id="@+id/companyInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/company"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/name"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
     <EditText
        android:id="@+id/telInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tel"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

         <EditText
        android:id="@+id/emailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/email"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:ems="10" >

        <requestFocus />
    </EditText>
          
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/tel"
        android:layout_marginTop="28dp"
        android:text="@string/Email" />
    
    <TextView
        android:id="@+id/tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/position"
        android:layout_marginTop="28dp"
        android:text="@string/Tel" />
    
    <TextView
        android:id="@+id/position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/company"
        android:layout_marginTop="28dp"
        android:text="@string/position" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/indexText1"
        android:layout_marginTop="39dp"
        android:layout_toLeftOf="@+id/nameInput"
        android:text="@string/name" />

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/name"
        android:layout_marginTop="29dp"
        android:text="@string/company" />

    <TextView
        android:id="@+id/indexText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:text="@string/index" />

    <Button
        android:id="@+id/cancle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/next"
        android:layout_alignBottom="@+id/next"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@+id/next"
        android:text="@string/cancle" />

    <Button
        android:id="@+id/next"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/indexText1"
        android:layout_below="@+id/emailInput"
        android:layout_marginTop="42dp"
        android:text="@string/next" />

</RelativeLayout>